Update paths for GitHub Pages deployment

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Sridhar Ravi - Portfolio</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="./styles.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-        <link rel="icon" type="image/png" href="Images/images.png">
+        <link rel="icon" type="image/png" href="./Images/images.png">
     </head>
     <body class="bg-gray-900 text-white overflow-hidden">
         <!-- Loading Screen -->
@@ -51,7 +51,7 @@
                     <div class="md:w-1/2 mt-12 md:mt-0">
                         <div class="relative">
                             <div class="absolute inset-0 bg-blue-400 rounded-full blur-2xl opacity-20"></div>
-                            <img src="Images/images.png" alt="Sridhar" class="relative w-64 h-64 mx-auto rounded-full border-4 border-blue-400">
+                            <img src="./Images/images.png" alt="Sridhar" class="relative w-64 h-64 mx-auto rounded-full border-4 border-blue-400">
                         </div>
                     </div>
                 </div>
@@ -102,7 +102,7 @@
                         <!-- Project Card 1 -->
                         <div class="project-card">
                             <div class="relative overflow-hidden rounded-lg">
-                                <img src="project1.jpg" alt="Project 1" class="w-full h-48 object-cover">
+                                <img src="./project1.jpg" alt="Project 1" class="w-full h-48 object-cover">
                                 <div class="project-overlay">
                                     <div class="flex space-x-4">
                                         <a href="#" class="project-link">Live Demo</a>
@@ -147,6 +147,6 @@
             </section>
         </div>
 
-        <script src="script.js"></script>
+        <script src="./script.js"></script>
     </body>
 </html>
