Update portfolio content with professional details and enhanced skills section

--- a/index.html
+++ b/index.html
@@ -35,16 +35,19 @@
                         <h1 class="text-5xl md:text-6xl font-bold mb-4">
                             Hi, I'm <span class="text-blue-400">Sridhar</span>
                         </h1>
-                        <p class="text-xl md:text-2xl text-gray-400 mb-8">Full Stack Developer & Tech Enthusiast</p>
+                        <p class="text-xl md:text-2xl text-gray-400 mb-8">🎓 B.E Computer Science | Full Stack Developer | DevOps Engineer</p>
                         <div class="flex space-x-4 justify-center md:justify-start">
-                            <a href="https://github.com/bobby-bash" target="_blank" class="social-link">
+                            <a href="https://github.com/bobby-bash" target="_blank" class="social-link" title="GitHub">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="https://www.linkedin.com/in/sridhar-r-/" target="_blank" class="social-link">
+                            <a href="https://www.linkedin.com/in/sridhar-r-/" target="_blank" class="social-link" title="LinkedIn">
                                 <i class="fab fa-linkedin"></i>
                             </a>
-                            <a href="https://medium.com/@archshri77" target="_blank" class="social-link">
+                            <a href="https://medium.com/@archshri77" target="_blank" class="social-link" title="Medium">
                                 <i class="fab fa-medium"></i>
+                            </a>
+                            <a href="https://twitter.com/Sridhar_ravi_" target="_blank" class="social-link" title="Twitter">
+                                <i class="fab fa-twitter"></i>
                             </a>
                         </div>
                     </div>
@@ -65,16 +68,32 @@
                         <div class="space-y-6">
                             <h3 class="text-2xl font-bold text-blue-400">My Journey</h3>
                             <p class="text-gray-400">
-                                I'm a passionate developer focused on creating beautiful and functional web applications.
-                                With expertise in both frontend and backend technologies, I love bringing ideas to life.
+                                🚀 Passionate Full Stack Developer and DevOps enthusiast with expertise in cloud technologies and automation. 
+                                Currently pursuing my B.E in Computer Science, I specialize in developing scalable web applications and implementing 
+                                efficient CI/CD pipelines. My tech journey is driven by continuous learning and innovation.
+                            </p>
+                            <p class="text-gray-400">
+                                💡 I love exploring new technologies and contributing to open-source projects. My focus areas include:
+                                <br>• Cloud Infrastructure & DevOps
+                                <br>• Full Stack Development
+                                <br>• System Design & Architecture
+                                <br>• Automation & Scripting
                             </p>
                         </div>
                         <div class="space-y-6">
                             <h3 class="text-2xl font-bold text-blue-400">Skills</h3>
                             <div class="grid grid-cols-2 gap-4">
                                 <div class="skill-item">
-                                    <i class="fab fa-html5 text-2xl"></i>
-                                    <span>HTML/CSS</span>
+                                    <i class="fab fa-aws text-2xl"></i>
+                                    <span>AWS Cloud</span>
+                                </div>
+                                <div class="skill-item">
+                                    <i class="fab fa-docker text-2xl"></i>
+                                    <span>Docker</span>
+                                </div>
+                                <div class="skill-item">
+                                    <i class="fab fa-python text-2xl"></i>
+                                    <span>Python</span>
                                 </div>
                                 <div class="skill-item">
                                     <i class="fab fa-js text-2xl"></i>
@@ -85,8 +104,8 @@
                                     <span>React</span>
                                 </div>
                                 <div class="skill-item">
-                                    <i class="fab fa-node text-2xl"></i>
-                                    <span>Node.js</span>
+                                    <i class="fab fa-linux text-2xl"></i>
+                                    <span>Linux/Unix</span>
                                 </div>
                             </div>
                         </div>
