--- a/index.html
+++ b/index.html
@@ -114,25 +114,80 @@
             </section>
 
             <!-- Projects Section -->
-            <section id="projects" class="py-20 bg-gray-800">
+            <section id="projects" class="py-20 bg-gray-900">
                 <div class="container mx-auto px-4">
-                    <h2 class="text-4xl font-bold text-center mb-16">My Projects</h2>
-                    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-                        <!-- Project Card 1 -->
-                        <div class="project-card">
-                            <div class="relative overflow-hidden rounded-lg">
-                                <img src="./project1.jpg" alt="Project 1" class="w-full h-48 object-cover">
+                    <div class="text-center mb-16">
+                        <h2 class="text-4xl font-bold project-title">Featured Projects</h2>
+                        <p class="text-gray-400 mt-4">Some of my recent work</p>
+                    </div>
+                    <div class="projects-grid grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                        <!-- Slack Bot Project -->
+                        <div class="project-card group">
+                            <div class="relative overflow-hidden rounded-2xl aspect-video">
+                                <img src="./Images/slackbot.jpg" alt="Slack Bot" class="w-full h-full object-cover">
                                 <div class="project-overlay">
-                                    <div class="flex space-x-4">
-                                        <a href="#" class="project-link">Live Demo</a>
-                                        <a href="#" class="project-link">Code</a>
+                                    <div class="flex flex-col items-center space-y-4">
+                                        <h3 class="text-2xl font-bold">Slack Bot</h3>
+                                        <p class="text-gray-200 text-center max-w-xs">Intelligent Slack bot using Python for task automation and team communication</p>
+                                        <div class="flex space-x-4">
+                                            <a href="https://github.com/bobby-bash/slack_bot" target="_blank" class="project-link">View Project</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                            <h3 class="text-xl font-bold mt-4">Project Name</h3>
-                            <p class="text-gray-400 mt-2">Project description goes here</p>
+                            <h3 class="project-name">Slack Bot</h3>
                         </div>
-                        <!-- Add more project cards as needed -->
+
+                        <!-- Home Automation Project -->
+                        <div class="project-card group">
+                            <div class="relative overflow-hidden rounded-2xl aspect-video">
+                                <img src="./Images/homeautomation.jpg" alt="Home Automation" class="w-full h-full object-cover">
+                                <div class="project-overlay">
+                                    <div class="flex flex-col items-center space-y-4">
+                                        <h3 class="text-2xl font-bold">Smart Home Automation</h3>
+                                        <p class="text-gray-200 text-center max-w-xs">IoT-based home automation system with mobile app control and voice commands</p>
+                                        <div class="flex space-x-4">
+                                            <a href="https://github.com/bobby-bash/home_automation" target="_blank" class="project-link">View Project</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <h3 class="project-name">Smart Home Automation</h3>
+                        </div>
+
+                        <!-- TheNo Project -->
+                        <div class="project-card group">
+                            <div class="relative overflow-hidden rounded-2xl aspect-video">
+                                <img src="./Images/theno.jpg" alt="TheNo Project" class="w-full h-full object-cover">
+                                <div class="project-overlay">
+                                    <div class="flex flex-col items-center space-y-4">
+                                        <h3 class="text-2xl font-bold">TheNo - Digital Menu</h3>
+                                        <p class="text-gray-200 text-center max-w-xs">Digital menu system with QR code scanning and real-time order tracking</p>
+                                        <div class="flex space-x-4">
+                                            <a href="https://github.com/bobby-bash/TheNo" target="_blank" class="project-link">View Project</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <h3 class="project-name">TheNo - Digital Menu</h3>
+                        </div>
+
+                        <!-- Naan Mudhalvan Project -->
+                        <div class="project-card group">
+                            <div class="relative overflow-hidden rounded-2xl aspect-video">
+                                <img src="./Images/naanmudhalvan.jpg" alt="Naan Mudhalvan" class="w-full h-full object-cover">
+                                <div class="project-overlay">
+                                    <div class="flex flex-col items-center space-y-4">
+                                        <h3 class="text-2xl font-bold">Naan Mudhalvan Portal</h3>
+                                        <p class="text-gray-200 text-center max-w-xs">Educational platform for skill development and career guidance</p>
+                                        <div class="flex space-x-4">
+                                            <a href="https://github.com/bobby-bash/team3_naan_mudhalvan" target="_blank" class="project-link">View Project</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <h3 class="project-name">Mall Tenant Management</h3>
+                        </div>
                     </div>
                 </div>
             </section>
