--- a/index.html
+++ b/index.html
@@ -21,15 +21,29 @@
             <nav class="fixed top-0 left-0 right-0 z-50 bg-gray-900/80 backdrop-blur-sm">
                 <div class="container mx-auto px-4">
                     <div class="flex items-center justify-between h-16">
-                        <a href="#hero" class="text-2xl font-bold bg-gradient-to-r from-blue-400 to-purple-500 bg-clip-text text-transparent">
+                        <a href="#hero" class="text-xl md:text-2xl font-bold bg-gradient-to-r from-blue-400 to-purple-500 bg-clip-text text-transparent">
                             Sridhar.dev
                         </a>
-                        <div class="flex items-center space-x-8">
+                        <div class="hidden md:flex items-center space-x-8">
                             <a href="#hero" class="nav-link" data-section="hero">Home</a>
                             <a href="#about" class="nav-link" data-section="about">About</a>
                             <a href="#projects" class="nav-link" data-section="projects">Projects</a>
                             <a href="#contact" class="nav-link" data-section="contact">Contact</a>
                         </div>
+                        <button class="md:hidden text-gray-400 hover:text-white" id="mobile-menu-button">
+                            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+                <!-- Mobile Menu -->
+                <div class="md:hidden hidden" id="mobile-menu">
+                    <div class="px-4 pt-2 pb-3 space-y-2 bg-gray-900/95 backdrop-blur-sm">
+                        <a href="#hero" class="block nav-link" data-section="hero">Home</a>
+                        <a href="#about" class="block nav-link" data-section="about">About</a>
+                        <a href="#projects" class="block nav-link" data-section="projects">Projects</a>
+                        <a href="#contact" class="block nav-link" data-section="contact">Contact</a>
                     </div>
                 </div>
             </nav>
