--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Sridhar Ravi - Portfolio</title>
         <link rel="stylesheet" href="./styles.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-        <link rel="icon" type="image/png" href="./Images/images.png">
+        <link rel="icon" type="image/png" href="./Images/title.png">
     </head>
     <body class="bg-gray-900 text-white overflow-hidden">
         <!-- Loading Screen -->
@@ -22,7 +22,7 @@
                 <div class="container mx-auto px-4">
                     <div class="flex items-center justify-between h-16">
                         <a href="#hero" class="text-xl md:text-2xl font-bold bg-gradient-to-r from-blue-400 to-purple-500 bg-clip-text text-transparent">
-                            Sridhar.dev
+                            Developer
                         </a>
                         <div class="hidden md:flex items-center space-x-8">
                             <a href="#hero" class="nav-link" data-section="hero">Home</a>
@@ -102,30 +102,62 @@
                         </div>
                         <div class="space-y-6">
                             <h3 class="text-2xl font-bold text-blue-400">Skills</h3>
-                            <div class="grid grid-cols-2 gap-4">
+                            <div class="skills-grid">
                                 <div class="skill-item">
-                                    <i class="fab fa-aws text-2xl"></i>
-                                    <span>AWS Cloud</span>
-                                </div>
-                                <div class="skill-item">
-                                    <i class="fab fa-docker text-2xl"></i>
-                                    <span>Docker</span>
-                                </div>
-                                <div class="skill-item">
-                                    <i class="fab fa-python text-2xl"></i>
+                                    <i class="fab fa-python"></i>
                                     <span>Python</span>
                                 </div>
                                 <div class="skill-item">
-                                    <i class="fab fa-js text-2xl"></i>
+                                    <i class="fab fa-js"></i>
                                     <span>JavaScript</span>
                                 </div>
                                 <div class="skill-item">
-                                    <i class="fab fa-react text-2xl"></i>
+                                    <i class="fab fa-java"></i>
+                                    <span>Java</span>
+                                </div>
+                                <div class="skill-item">
+                                    <i class="fas fa-code"></i>
+                                    <span>C++</span>
+                                </div>
+                                <div class="skill-item">
+                                    <i class="fas fa-leaf"></i>
+                                    <span>Spring Boot</span>
+                                </div>
+                                <div class="skill-item">
+                                    <i class="fas fa-laptop-code"></i>
+                                    <span>Operating Systems</span>
+                                </div>
+                                <div class="skill-item">
+                                    <i class="fas fa-database"></i>
+                                    <span>MongoDB</span>
+                                </div>
+                                <div class="skill-item">
+                                    <i class="fas fa-database"></i>
+                                    <span>MySQL</span>
+                                </div>
+                                <div class="skill-item">
+                                    <i class="fab fa-html5"></i>
+                                    <span>HTML5</span>
+                                </div>
+                                <div class="skill-item">
+                                    <i class="fab fa-css3-alt"></i>
+                                    <span>CSS3</span>
+                                </div>
+                                <div class="skill-item">
+                                    <i class="fab fa-react"></i>
                                     <span>React</span>
                                 </div>
                                 <div class="skill-item">
-                                    <i class="fab fa-linux text-2xl"></i>
-                                    <span>Linux/Unix</span>
+                                    <i class="fab fa-node-js"></i>
+                                    <span>Node.js</span>
+                                </div>
+                                <div class="skill-item">
+                                    <i class="fab fa-git-alt"></i>
+                                    <span>Git</span>
+                                </div>
+                                <div class="skill-item">
+                                    <i class="fab fa-aws"></i>
+                                    <span>AWS</span>
                                 </div>
                             </div>
                         </div>
