--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div class="md:w-1/2 mt-12 md:mt-0">
                         <div class="relative">
                             <div class="absolute inset-0 bg-blue-400 rounded-full blur-2xl opacity-20"></div>
-                            <img src="./Images/images.png" alt="Sridhar" class="relative w-64 h-64 mx-auto rounded-full border-4 border-blue-400">
+                            <img src="./Images/image.png" alt="Sridhar" class="relative w-64 h-64 mx-auto rounded-full border-4 border-blue-400">
                         </div>
                     </div>
                 </div>
