--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                             <a href="https://www.linkedin.com/in/sridhar-r-/" target="_blank" class="social-link" title="LinkedIn">
                                 <i class="fab fa-linkedin"></i>
                             </a>
-                            <a href="https://medium.com/@archshri77" target="_blank" class="social-link" title="Medium">
-                                <i class="fab fa-medium"></i>
+                            <a href="https://discord.gg/Q9KmY55HbS" target="_blank" class="social-link" title="Medium">
+                                <i class="fab fa-discord"></i>
                             </a>
                             <a href="https://twitter.com/Sridhar_ravi_" target="_blank" class="social-link" title="Twitter">
                                 <i class="fab fa-twitter"></i>
