--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <a href="https://www.linkedin.com/in/sridhar-r-/" target="_blank" class="social-link" title="LinkedIn">
                                 <i class="fab fa-linkedin"></i>
                             </a>
-                            <a href="https://discord.gg/Q9KmY55HbS" target="_blank" class="social-link" title="Medium">
+                            <a href="https://discord.gg/Q9KmY55HbS" target="_blank" class="social-link" title="Discord">
                                 <i class="fab fa-discord"></i>
                             </a>
                             <a href="https://twitter.com/Sridhar_ravi_" target="_blank" class="social-link" title="Twitter">
@@ -229,18 +229,20 @@
                             <input type="hidden" name="_template" value="table">
                             <input type="hidden" name="_next" value="https://sridhar-ravi.vercel.app">
                             <div>
-                                <label for="name" class="block text-sm font-medium mb-2">Name</label>
-                                <input type="text" id="name" name="name" required class="form-input">
+                                <input type="text" name="name" class="w-full px-4 py-3 bg-gray-800 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400" placeholder="Your Name" required>
                             </div>
                             <div>
-                                <label for="email" class="block text-sm font-medium mb-2">Email</label>
-                                <input type="email" id="email" name="email" required class="form-input">
+                                <input type="email" name="email" class="w-full px-4 py-3 bg-gray-800 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400" placeholder="Your Email" required>
                             </div>
                             <div>
-                                <label for="message" class="block text-sm font-medium mb-2">Message</label>
-                                <textarea id="message" name="message" rows="4" required class="form-input"></textarea>
+                                <textarea name="message" rows="4" class="w-full px-4 py-3 bg-gray-800 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400" placeholder="Your Message" required></textarea>
                             </div>
-                            <button type="submit" class="btn-primary w-full">Send Message</button>
+                            <div class="text-center">
+                                <button type="submit" class="inline-flex items-center px-6 py-3 bg-blue-500 hover:bg-blue-600 text-white font-semibold rounded-lg transition-colors duration-200">
+                                    <i class="fas fa-paper-plane mr-2"></i>
+                                    Send Message
+                                </button>
+                            </div>
                         </form>
                     </div>
                 </div>
