--- a/index.html
+++ b/index.html
@@ -223,19 +223,17 @@
                 <div class="container mx-auto px-4">
                     <h2 class="text-4xl font-bold text-center mb-16">Get In Touch</h2>
                     <div class="max-w-2xl mx-auto">
-                        <form class="space-y-6" action="https://formsubmit.co/archshri77@gmail.com" method="POST">
-                            <input type="hidden" name="_subject" value="New Portfolio Contact!">
+                        <form id="contactForm" class="space-y-6" onsubmit="submitToSheet(event)">
+                            <input type="hidden" name="_next" value="#hero">
                             <input type="hidden" name="_captcha" value="false">
-                            <input type="hidden" name="_template" value="table">
-                            <input type="hidden" name="_next" value="https://sridhar-ravi.vercel.app">
                             <div>
-                                <input type="text" name="name" class="w-full px-4 py-3 bg-gray-800 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400" placeholder="Your Name" required>
+                                <input type="text" id="name" name="name" class="w-full px-4 py-3 bg-gray-800 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400" placeholder="Your Name" required>
                             </div>
                             <div>
-                                <input type="email" name="email" class="w-full px-4 py-3 bg-gray-800 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400" placeholder="Your Email" required>
+                                <input type="email" id="email" name="email" class="w-full px-4 py-3 bg-gray-800 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400" placeholder="Your Email" required>
                             </div>
                             <div>
-                                <textarea name="message" rows="4" class="w-full px-4 py-3 bg-gray-800 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400" placeholder="Your Message" required></textarea>
+                                <textarea id="message" name="message" rows="4" class="w-full px-4 py-3 bg-gray-800 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400" placeholder="Your Message" required></textarea>
                             </div>
                             <div class="text-center">
                                 <button type="submit" class="inline-flex items-center px-6 py-3 bg-blue-500 hover:bg-blue-600 text-white font-semibold rounded-lg transition-colors duration-200">
