--- a/index.html
+++ b/index.html
@@ -226,6 +226,8 @@
                         <form id="contactForm" class="space-y-6" onsubmit="submitToSheet(event)">
                             <input type="hidden" name="_next" value="#hero">
                             <input type="hidden" name="_captcha" value="false">
+                            <input type="hidden" name="_template" value="table">
+                            <input type="hidden" name="_subject" value="New Contact Form Submission">
                             <div>
                                 <input type="text" id="name" name="name" class="w-full px-4 py-3 bg-gray-800 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400" placeholder="Your Name" required>
                             </div>
