--- a/index.html
+++ b/index.html
@@ -223,11 +223,9 @@
                 <div class="container mx-auto px-4">
                     <h2 class="text-4xl font-bold text-center mb-16">Get In Touch</h2>
                     <div class="max-w-2xl mx-auto">
-                        <form id="contactForm" class="space-y-6" onsubmit="submitToSheet(event)">
+                        <form id="contactForm" class="space-y-6">
                             <input type="hidden" name="_next" value="#hero">
                             <input type="hidden" name="_captcha" value="false">
-                            <input type="hidden" name="_template" value="table">
-                            <input type="hidden" name="_subject" value="New Contact Form Submission">
                             <div>
                                 <input type="text" id="name" name="name" class="w-full px-4 py-3 bg-gray-800 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400" placeholder="Your Name" required>
                             </div>
@@ -248,7 +246,7 @@
                 </div>
             </section>
         </div>
-
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
         <script src="./script.js"></script>
     </body>
 </html>
