--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 <div class="container mx-auto px-4">
                     <h2 class="text-4xl font-bold text-center mb-16">Get In Touch</h2>
                     <div class="max-w-2xl mx-auto">
-                        <form id="contactForm" class="space-y-6">
+                        <form id="contactForm" onsubmit="return submitForm(event)" class="space-y-6">
                             <input type="hidden" name="_next" value="#hero">
                             <input type="hidden" name="_captcha" value="false">
                             <div>
